# SEGym

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  commands.md  demo.ipynb  dummy_dataset.json  get_ollama_gguf.py  main.py  n2.patch  nAll.patch  output.txt  pyproject.toml  repo-description.txt  requirements.txt  setup.cfg  test_output.txt
.devcontainer/: devcontainer.json
helpers/: get_ollama_gguf.py  list_ollama_models.py
patches/: file.patch
se_gym/: .aider.conf.yml  __init__.py  __main__.py  aider_agent.py  api.py  call_api.py  caller.py  classic_genetic.py  client.py  codemapretriever.py  config.py  dummy_ds.py  environment.py  executor.py  fitness.py  generator_singleton.py  generators.py  genetic.py  lmu_generator.py  observations.py  observe.py  observe2.py  ollama_lmu.py  openai_lmu.py  output_schema.py  output_validator.py  runner.py  runner_docker.py  runner_host.py  sampler.py  sampler2.py  solver.py  utils.py
se_gym/observe/: __init__.py  compress.py  read.py  select.py
se_gym/test/: caller_test.py  executor_test.py  main_test.py  observation_test.py  observe_test.py  runner_test.py  sampler_test.py  schema_test.py
src/diff_patch_search/: __main__.py  call_api.py  call_openai.py  describe_repo.py  environment.py  generate_patch.py  ollama_lmu.py  primes.py  run_docker.py  sandbox.py  solver.py
src/se_gym/: __main__.py  call_api.py  environment.py  solver.py
tests/: main_test.py
