[tool.poetry]
name = "se_gym"
version = "0.0.2"
authors = [
    "Dr. Kyrill Schmid <kyrillschmid@web.de>",
    "Gerhard Stenzel <gerhard.stenzel@ifi.lmu.de>"
]
readme = "README.md"
description = "SEGym allows you to apply patches to Python packages and run tests in isolated environments."
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
annotated-types = "^0.6.0"
docker = "^7.1.0"
iniconfig = "^2.0.0"
openai = "1.40.6"
pydantic = "^2.8.2"
pyproject_hooks = "^1.1.0"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
tqdm = "^4.66.5"
typing_extensions = "^4.12.2"
instructor = "1.2.5"
tenacity = "8.3.0"
datasets = "^2.20.0"
rank_bm25 = "^0.2.2"
regex = "^2024.7.24"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.25.0"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
nest-asyncio = "^1.6.0"
haystack-ai = "^2.3.1"
ollama-haystack = "^0.0.7"
rich = "^13.7.1"
anthropic = "^0.31.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.5.5"
treescope = "^0.1.0"
ollama = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["./temp/**"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]