[metadata]
name = diff_patch_search
version = 0.0.1
author = Dr. Kyrill Schmid
author_email = kyrillschmid@web.de
description = A tool that finds diff patches for a given issue
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    diff-patch-search = diff_patch_search.__main__:main