[metadata]
name = se_gym
version = 0.0.1
author = Dr. Kyrill Schmid
author_email = kyrillschmid@web.de
description = SEGym allows you to apply patches to Python packages and run tests in isolated environments.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    se-gym = se_gym.__main__:main